// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssuesTableTest render automated checks disabled 1`] = `
<div
  className="issues-table"
>
  <h1>
    test title
  </h1>
  <div>
    <div
      className="details-view-command-bar"
    >
      <VisualizationToggle
        checked={false}
        className="automated-checks-details-view-toggle"
        disabled={false}
        label="Show failures"
        onClick={[Function]}
        visualizationName="Automated checks"
      />
    </div>
    <ExportDialog
      description=""
      exportResultsType="AutomatedChecks"
      html=""
      isOpen={false}
      onClose={[Function]}
      onDescriptionChange={[Function]}
    />
    <div
      className="details-disabled-message"
      role="alert"
    >
      Turn on 
      <Term>
        Automated checks
      </Term>
       to see a list of failures.
    </div>
  </div>
</div>
`;

exports[`IssuesTableTest render spinner for scanning state 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div>
    <div className=\\"details-view-command-bar\\">
      <VisualizationToggle label=\\"Show failures\\" checked={true} disabled={true} onClick={[Function: proxy]} className=\\"automated-checks-details-view-toggle\\" visualizationName=\\"Automated checks\\" />
    </div>
    <ExportDialog deps={[undefined]} isOpen={false} description=\\"\\" html=\\"\\" onClose={[Function: bound ]} onDescriptionChange={[Function: bound ]} exportResultsType=\\"AutomatedChecks\\" />
    <StyledSpinnerBase className=\\"details-view-spinner\\" size={3} label=\\"Scanning...\\" />
  </div>
</div>"
`;

exports[`IssuesTableTest render spinner, issuesEnabled == null 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <StyledSpinnerBase className=\\"details-view-spinner\\" size={3} label=\\"Loading...\\" />
</div>"
`;

exports[`IssuesTableTest render spinner, issuesEnabled is an empty object 1`] = `
<div
  className="issues-table"
>
  <h1>
    test title
  </h1>
  <div>
    <div
      className="details-view-command-bar"
    >
      <VisualizationToggle
        checked={Object {}}
        className="automated-checks-details-view-toggle"
        disabled={false}
        label="Show failures"
        visualizationName="Automated checks"
      />
      <CustomizedActionButton
        iconProps={
          Object {
            "iconName": "Export",
          }
        }
        onClick={[Function]}
      >
        Export result
      </CustomizedActionButton>
    </div>
    <ExportDialog
      description=""
      exportResultsType="AutomatedChecks"
      html=""
      isOpen={false}
      onClose={[Function]}
      onDescriptionChange={[Function]}
    />
    <StyledSpinnerBase
      className="details-view-spinner"
      label="Loading data..."
      size={3}
    />
  </div>
</div>
`;

exports[`IssuesTableTest render table with 0 issues 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div>
    <div className=\\"details-view-command-bar\\">
      <VisualizationToggle label=\\"Show failures\\" checked={true} disabled={false} onClick={[Function: proxy]} className=\\"automated-checks-details-view-toggle\\" visualizationName=\\"Automated checks\\" />
      <CustomizedActionButton iconProps={{...}} onClick={[Function: bound ]}>
        Export result
      </CustomizedActionButton>
    </div>
    <ExportDialog deps={[undefined]} isOpen={false} description=\\"\\" html=\\"\\" onClose={[Function: bound ]} onDescriptionChange={[Function: bound ]} exportResultsType=\\"AutomatedChecks\\" />
    <div className=\\"issues-table-details\\">
      <IssuesDetailsList violations={{...}} issuesTableHandler={{...}} issuesSelection={{...}} />
      <div className=\\"issue-detail-outer-container ms-Fabric\\">
        <IssuesDetailsPane deps={[undefined]} selectedIdToRuleResultMap={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" issueTrackerPath=\\"example/example\\" featureFlagData={{...}} />
      </div>
    </div>
  </div>
</div>"
`;

exports[`IssuesTableTest render table with 1 issues 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div>
    <div className=\\"details-view-command-bar\\">
      <VisualizationToggle label=\\"Show failures\\" checked={true} disabled={false} onClick={[Function: proxy]} className=\\"automated-checks-details-view-toggle\\" visualizationName=\\"Automated checks\\" />
      <CustomizedActionButton iconProps={{...}} onClick={[Function: bound ]}>
        Export result
      </CustomizedActionButton>
    </div>
    <ExportDialog deps={[undefined]} isOpen={false} description=\\"\\" html=\\"\\" onClose={[Function: bound ]} onDescriptionChange={[Function: bound ]} exportResultsType=\\"AutomatedChecks\\" />
    <div className=\\"issues-table-details\\">
      <IssuesDetailsList violations={{...}} issuesTableHandler={{...}} issuesSelection={{...}} />
      <div className=\\"issue-detail-outer-container ms-Fabric\\">
        <IssuesDetailsPane deps={[undefined]} selectedIdToRuleResultMap={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" issueTrackerPath=\\"example/example\\" featureFlagData={{...}} />
      </div>
    </div>
  </div>
</div>"
`;

exports[`IssuesTableTest render table with 2 issues 1`] = `
"<div className=\\"issues-table\\">
  <h1>
    test title
  </h1>
  <div>
    <div className=\\"details-view-command-bar\\">
      <VisualizationToggle label=\\"Show failures\\" checked={true} disabled={false} onClick={[Function: proxy]} className=\\"automated-checks-details-view-toggle\\" visualizationName=\\"Automated checks\\" />
      <CustomizedActionButton iconProps={{...}} onClick={[Function: bound ]}>
        Export result
      </CustomizedActionButton>
    </div>
    <ExportDialog deps={[undefined]} isOpen={false} description=\\"\\" html=\\"\\" onClose={[Function: bound ]} onDescriptionChange={[Function: bound ]} exportResultsType=\\"AutomatedChecks\\" />
    <div className=\\"issues-table-details\\">
      <IssuesDetailsList violations={{...}} issuesTableHandler={{...}} issuesSelection={{...}} />
      <div className=\\"issue-detail-outer-container ms-Fabric\\">
        <IssuesDetailsPane deps={[undefined]} selectedIdToRuleResultMap={{...}} pageTitle=\\"pageTitle\\" pageUrl=\\"http://pageUrl\\" issueTrackerPath=\\"example/example\\" featureFlagData={{...}} />
      </div>
    </div>
  </div>
</div>"
`;
